# async-github-api-calls

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  utils.py
tests/: test_main.py
