[tool.poetry]
name = "async-github-api-calls"
version = "0.1.0"
description = ""
authors = ["Mohammed Rishad <mohammedrishad.vk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
asyncio = "^3.4.3"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
pytest = "^6.2.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
